--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,30 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Getlinked - A Tech Hackathon Project by Ezekiel Nwoye" />
+    <meta name="description" content="A Tech Hackathon Project by Ezekiel Nwoye" />
+    <meta name="author" content="Ezekiel Nwoye" />
+    <meta name="keywords" content="tech, hackathon, project, Getlinked, Ezekiel Nwoye" />
+    <meta property="og:title" content="Getlinked" />
+    <meta property="og:description" content="A Tech Hackathon Project by Ezekiel Nwoye" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/df684yx7d/image/upload/v1695866578/getlinked-website/images/website_preview.png"
+    />
+    <meta property="og:url" content="https://ezekiel-getlinked-clone.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Getlinked" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Getlinked - A Tech Hackathon Project by Ezekiel Nwoye</title>
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@nwoye_ezekiel" />
+    <meta name="twitter:creator" content="@nwoye_ezekiel" />
+    <meta
+      name="twitter:image"
+      content="https://res.cloudinary.com/df684yx7d/image/upload/v1695866578/getlinked-website/images/website_preview.png"
+    />
+
+    <title>Getlinked</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
